[project]
name = "pinchana-core"
version = "0.2b0"
description = "Shared models, storage, and VPN controller for scraper services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
    "yt-dlp>=2026.6.9",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
